# main_site

./: .gitignore  Multilingual.hs  README.md  cabal.project.freeze  flolac-site.cabal  flolac07.html  flolac08.html  flolac11.html  flolac17.html  flolac19.html  index.html  package-lock.json  package.json  site.hs  stack.yaml
2022/: DTP-Logic.agda  Lambda.agda  RedBlackOkasaki.hs
2023/: talkL_slides.pdf:Zone.Identifier
content/: blank.html  contact.html  index.en.html  index.html  index.zh.html  mountain.html  ocean.html
css/: custom.css
flolac07/: admitted.html  derivation.html  en.html  fp.html  index.html  init_notes.html  invited_talk_lyuu.html  invited_talk_tung.html  logic.html  transportation.html  types.html
flolac08/: abs-value.html  delimited-cont.html  derivation.html  doku.html  en.html  feed.html  index.html  logic.html  partial-eval.html  start.html
flolac09/: doku.html  feed.html  feed.mode.list.html?mode=list.html  fv.html  index.html  l.html  mc.html  ml.html  start.html  transportation.html
flolac10/: deno.html  feed.html  feed.mode.list.html?mode=list.html  fp.html  frama-c.html  logic.html  programme.html  registration.html
flolac11/: feed.html  feed.mode.list.html?mode=list.html  index.html
flolac12/: feed.html  feed.mode.list.html?mode=list.html  index.html
flolac14/: attendance.html  des.html  dtp.html  fp.html  index.html  ops.html  start.html  talk1.html  teasers.html
flolac15/: download.html  download?do=login&sectok=cdd8554576dfae741bb43a2b33975863.html  download?do=login&sectok=faad167581cf20c84b1588a1aa41aab5.html  feed.php  feed.php?mode=list&ns=  index.html  lib_tpl_dokui_images_apple-touch-icon.png?do=index.html  lib_tpl_dokui_images_apple-touch-icon.png?do=login&sectok=ac63d9698051fa064a0143d39f0403a1.html  (+2 more)
(+891 files in other folders)
