name:               flolac-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll >= 4.12
                  , unordered-containers >= 0.2.10.0
                  , text >= 1.2.3.1
                  , yaml >= 0.11.2
  ghc-options:      -threaded
  default-language: Haskell2010
  other-modules:    Multilingual
