name:               flolac-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  hs-source-dirs:   src
  build-depends:    base >= 4.9 && < 5
                  , binary >= 0.5 && < 0.10 
                  , extra  >= 0.1
                  , filepath >= 1.0 && < 1.5
                  , hakyll >= 4.13
                  , hakyll-sass >= 0.2.4
                  , mtl >= 1 && < 2.3
                  , parsec >= 3.0 && < 3.2
                  , scientific >= 0.3.6 && < 4
                  , text >= 1.2.3.1
                  , time >= 1.9 && < 2.0
                  , time-locale-compat >= 0.1 && < 0.2
                  , unordered-containers >= 0.2.10.0
                  , vector >= 0.12 && < 1
                  , yaml >= 0.11.2
  ghc-options:      -threaded
  default-language: Haskell2010

  other-modules:    Multilingual
                    Redirect
                    Hakyll.Web.ExtendedTemplate
                    Hakyll.Web.ExtendedTemplate.Context
                    Hakyll.Web.ExtendedTemplate.Parser
                    Hakyll.Web.ExtendedTemplate.Trim
                    Hakyll.Web.ExtendedTemplate.Type
